# RtRetrievalFramework

./: .gitattributes  .gitignore  AUTHORS  COPYING  ChangeLog  Dockerfile  HySDS_Dockerfile.txt  INSTALL  LICENSE.txt  Makefile.am  Makefile.in  README  README.developer  aclocal.m4  amazon_build.script  bootstrap  configure  configure.ac  nonjpl_build.script  pleiades_build.script  pleiades_data.script  production_build.script  requirements.txt  setup_env.sh
bindings/: README.doxygen  README.mac
bindings/python/: README.doxygen  README.mac  __init__.py  create_swig_wrap.py  python.am  swig_wrap.tmpl
config/: depf90  doc_footer.html  doxy2swig.py  doxygen.cfg  doxygen_fortran.cfg  doxygen_single.cfg  setup_compiler_env.sh  valgrind.suppressions
config/am/: doxygen.am
config/m4/: ac_2stream.m4  ac_blitz.m4  ac_boost.m4  ac_bzlib.m4  ac_compiler_flag.m4  ac_determine_compiler.m4  ac_doxygen.m4  ac_gsl.m4  ac_hdf5.m4  ac_lidort-3.6.m4  ac_lidort-3.8.3.m4  ac_lua.m4  ac_parallel.m4  ac_pkg_swig.m4  ac_python_devel.m4  ac_python_nosetests.m4  ac_python_sphinx.m4  ac_ruby.m4  acx_pthread.m4  ax_cxx_compile_stdcxx.m4  loc_msg.m4  mp_with_curses.m4
deprecated/cluster/: Cluster_Utils.py  cluster_config.py  job_array_template.py  launch_jobs.py  query_script_template.py  run_job.py
deprecated/fortran_dia/: Fortran.pm
deprecated/generator/: DiskOperations.py  Generator_Utils.py  ThreadPool.py  run_generator.py
deprecated/ncep_download/: download_ncep.py
deprecated/python_lib/: Apriori_DB.py  Blitz_Array.py  GOSAT_File.py  H5Dump_Util.py  IDL_Util.py  L2_FP_Util.py  LCS.py  OCO_Statistics.py  README  TCCON_Results.py
deprecated/reg_compare/: regression_compare.pl
deprecated/utils/: average_profiles.py  combine_ils_files.py  compare_results.py  compute_rms_values.py  compute_runtimes.py  convert_arp_interpol_file.py  convert_frac_hour.py  convert_gosat_radcnv.py  convert_inp_files_format.py  copy_testcase_spectra.py  count_list_globs.py  create_dataset_from_inp.py  create_fake_l1b_from_gosat.py  create_log_p_profile.py  create_runlog_mean_psurf.py  create_runlog_sounding_info.py  create_simple_cov.py  determine_gosat_cont_indicies.py  dump_orbit_sim_pro.py  export_gds_l2_case.py  extract_acos_spectra.py  extract_disp_files.py  extract_gosat_noise_from_hdf.py  extract_gosat_spectra.py  extract_ils_from_hdf.py  extract_matrix_files.py  extract_orbit_sim_data.py  extract_snr_from_hdf.py  extract_sv_jacobians.py  fix_fts_radmeas.py  gather_data.py  interpol_cov.py  jobarray_config.py  jobarray_util.py  l2_vis.py  localize_aggregate.py  make_diag_only_cov.py  make_run_lists.sh  match_fts_oco_times.py  noisify_spectra.py  (+20 more)
design/: Full_Physics_Software_Architecture_UML.uml  HITRAN_Reader.xmi  IMPORTANT_SUBVERSION_INFO.txt  README.txt  State_Structure.xmi
doc/: API_README  update_guides.sh
doc/memo/: README
doc/old/: Makefile  l2.tex  tau2metric_new.ps
doc/python/: README  appendix.rst  appendix_a.rst  conf.py  doc_python.am  index.rst
input/: input.am  setup_env.sh
input/common/: common.am
input/fts/: fts.am
input/gosat/: gosat.am
input/oco/: oco.am
lib/: README  common.i  doxygen.h  fp_shared_ptr.i  lib.am  my_shared_ptr.i  swig_array.i  swig_array_inc.i  swig_exception.i  swig_optional.i  swig_pickle.i  swig_print.i  swig_python_attribute.i  swig_rational.i  swig_std.i  swig_to_python.h  swig_type_mapper.h  swig_type_mapper_base.h  test_all.cc  test_all.sh
lib/Deprecated/: deprecated.am  solar_absorption_oco_file.cc  solar_absorption_oco_file.h  solar_absorption_oco_file.i  solar_absorption_oco_file_f.F90  solar_absorption_oco_file_test.cc  solar_continuum_polynomial.cc  solar_continuum_polynomial.h  solar_continuum_polynomial.i  solar_continuum_polynomial_test.cc
lib/FixedLevel/: README  absorber_vmr_fixed_level.cc  absorber_vmr_fixed_level.h  absorber_vmr_fixed_level.i  absorber_vmr_fixed_level_output.cc  absorber_vmr_fixed_level_output.h  absorber_vmr_fixed_level_scaled.cc  absorber_vmr_fixed_level_scaled.h  absorber_vmr_fixed_level_scaled.i  absorber_vmr_fixed_level_scaled_output.cc  absorber_vmr_fixed_level_scaled_output.h  absorber_vmr_fixed_level_scaled_test.cc  absorber_vmr_fixed_level_test.cc  fixed_level.am  pressure_fixed_level.cc  pressure_fixed_level.h  pressure_fixed_level.i  pressure_fixed_level_output.cc  pressure_fixed_level_output.h  (+13 more)
lib/Lua/: README  (+16 more)
python_experimental/: .gitignore  README  absorber_vmr_ecmwf.py  aer_diagnostics.py  aerosol_interp.py  aerosol_log_10.py  aerosol_shape.py  cloud_perturbations.py  compare_f.py  compare_jacobians.py  config_aer_shape.py  config_aer_shape_dbg.py  config_fluorescence.py  config_log_10.py  config_psigma.py  config_psigma_30.py  finite_diff_check.py  fit_aer_gaussians.py  fit_l1b_f.py  fluorescence.py  l2_special_run_template.py  plot_aer_shape_analysis.py  pressure_sigma.py  tccon_apriori_xco2.py  temperature_ecmwf.py  test_dispersion_solver.py
script/: l2_fp_profile  l2_fp_valgrind  python_wrap.sh.in  script.am  setup_fp_env.sh.in
support/: full_physics  setup_env.sh  support.am
test/: README  test.am  test.list  test_python.list
unit_test_data/: Lua Configuration File.zargo  README.hdf  acos_Fph_090627_37_Test_v050050_Fph2900_r11_110523154640i.config  config.lua  config_20100207003330.lua  config_aer_shape.lua  config_brdf_soil.lua  config_brdf_veg.lua  config_breon_soil.lua  config_breon_veg.lua  config_cloudy.lua  config_coxmunk+lamb.lua  config_coxmunk.lua  config_coxmunk_scaled.lua  config_ecmwf.lua  config_fluor.lua  config_fts.lua  config_oco2.lua  config_rayleigh_only.lua  config_zeroext.lua  connor_rayleigh_only.txt  ecmwf_20090627211734.h5  fixed_level_base_config.lua  fts_test_base_config.lua  fts_unit_test_config.lua  gosat.config  gosat_tccon.config  heritage_file_test.run  ifstream_cs_test.txt  intvec_test.txt  l1b_20090627211734.h5  l1b_20090930222759.h5  l2_20090627211734.conf  l2_fts_unit_test_static_input.h5  l2_ils_interpol.h5  l2_merra_aerosol.h5  l2_merra_aerosol_RH.h5  l2_multimicrowindow.h5  l2_ocowin.h5  large_sounding_ids.list  (+6 more)
verification_test/: README
(+3388 files in other folders)
